# codex

./: .gitattributes  AGENTS.md
.github/workflows/: xullul-release.yml
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server/src/: bespoke_event_handling.rs
codex-rs/config/src/: config_toml.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: compact.rs  compact_remote.rs  compact_tests.rs  goals.rs  mcp_tool_call_tests.rs
codex-rs/exec/src/: event_processor_with_human_output.rs  event_processor_with_human_output_tests.rs
codex-rs/features/src/: feature_configs.rs  lib.rs  tests.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/models-manager/: models.json
codex-rs/models-manager/src/: model_info.rs
codex-rs/protocol/src/: config_types.rs  parse_command.rs  protocol.rs
codex-rs/repo-intel/: BUILD.bazel  Cargo.toml
codex-rs/repo-intel/src/: lib.rs
codex-rs/rollout-trace/src/: protocol_event.rs
codex-rs/rollout/src/: policy.rs
codex-rs/shell-command/src/: action_classification.rs  lib.rs  parse_command.rs  powershell_display.rs  powershell_exploration.rs  powershell_file_read.rs  powershell_line_range.rs  powershell_parser.rs  powershell_projection.rs  powershell_syntax.rs
codex-rs/tools/src/: agent_tool.rs  agent_tool_tests.rs  goal_tool.rs  lib.rs  tool_config.rs  (+8 more)
codex-rs/tui/: styles.md
docs/: config.md  install.md  xullul-release.md
packaging/winget/: Xullul.CodexXullul.yaml.template
scripts/install/: install-codex-xullul-direct.ps1  install-codex-xullul.ps1  install-codex-xullul.sh
(+330 files in other folders)
