[package]
name = "codex-repo-intel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_repo_intel"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
dunce = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
